# schism

./: .gitignore  README.md  docker-compose.yml  fix_engine.py  patch_contradiction_engine.py  patch_engine_breakdown.py  patch_job_breakdown.py  patch_jobs_recommendations.py  patch_llm_client_breakdown.py  patch_page_no_contradiction.py  patch_report.py  patch_types.py  update_contradiction.py
apps/api/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
apps/api/app/: __init__.py  config.py  dependencies.py  logging_utils.py  main.py
apps/api/app/models/: __init__.py  api.py  claim.py  contradiction.py  paper.py  report.py
apps/api/app/repositories/: __init__.py  sqlite.py
apps/api/app/routers/: analyze.py  export.py  health.py  jobs.py  ollama.py  search.py
apps/api/app/services/: __init__.py  analysis_service.py  contradiction_engine.py  embedding.py  llm_client.py  llm_parser.py  paper_input.py  rag_service.py  report_exporter.py  summarizer.py  vector_store.py
apps/api/app/services/ingestion/: __init__.py  arxiv.py  base.py  openalex.py  pubmed.py  semantic_scholar.py  service.py
apps/api/schism_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
apps/api/tests/: test_analysis_service.py  test_caching.py  test_clustering.py  test_contradiction_engine.py  test_ingestion.py  test_llm_parser.py  test_ollama_route.py  test_paper_input.py  test_routes.py
apps/scripts/: schism.sh
frontend/: .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: providers.tsx
frontend/components/analyzing/: claims-preview.tsx  stage-list.tsx
frontend/lib/: api-client.ts  api.ts  polling.ts  search-history.ts  semantic-scholar-autocomplete.ts  store.ts  types.ts  use-autocomplete.ts
frontend/styles/: globals.css
(+26 files in other folders)
