[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "schism-api"
version = "0.1.0"
description = "FastAPI backend for Schism contradiction detection"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "numpy>=2.2.0",
  "pydantic>=2.11.0",
  "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
ml = [
  "qdrant-client>=1.12.0",
  "sentence-transformers>=3.4.0",
  "hdbscan>=0.8.40",
]
dev = [
  "pytest>=8.4.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
